# handlers/group-delete.go
@@ -1,8 +1,8 @@
 package handlers
 
 import (
+	"encoding/json"
 	"net/http"
-	"strconv"
 
 	"github.com/gorilla/mux"
 	"github.com/matejelenc/rest-api/data"
@@ -14,17 +14,25 @@ import (
 //	201: noContent
 
 //DeleteGroup removes a group from the database
-func DeleteGroup(rw http.ResponseWriter, r *http.Request) {
+func DeleteGroup(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("content-type", "application/json")
 
-	vars := mux.Vars(r)
-	id, err := strconv.Atoi(vars["id"])
-	if err != nil {
-		http.Error(rw, "Unable to convert id", http.StatusBadRequest)
+	params := mux.Vars(r)
+	var group data.Group
+
+	foundGroup := DB.First(&group, params["id"])
+	if foundGroup.Error != nil {
+		http.Error(w, "Group not found", http.StatusBadRequest)
 		return
 	}
 
-	err = data.DeleteGroup(id)
-	if err != nil {
-		http.Error(rw, "Group not found", http.StatusBadRequest)
+	deletedGroup := DB.Delete(&group)
+	if deletedGroup.Error != nil {
+		http.Error(w, "Could not delete group", http.StatusInternalServerError)
+		return
 	}
+
+	DB.Model(&data.Person{}).Where("group_name = ?", group.Name).Update("group_name", group.Name+"-deleted")
+
+	json.NewEncoder(w).Encode(&group)
 }
